recovery oplog application updates multikey info on wrong collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.11, 4.4.10, 5.0.4, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.0, v4.4, v4.2, v4.0
    • Execution Team 2021-07-26
    • 70
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The list of multikey updates is batched and keyed by collection name during oplog application OplogApplierImpl::_applyOplogBatch. In a recovery scenario where there may be multiple collections with the same name at different points in history, this mapping could be problematic. Downstream components such as the replication StorageInterface::setIndexIsMultikey() would be less prone to looking up the wrong collection from the collection catalog if given the collection UUID.

      A more robust way to maintain the multikey information to update would be to use the collection UUID rather than the namespace.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: