SERVER-58385 add collection UUID to MultikeyPathInfo